--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ADD TITLE HERE</title>
     <link rel="stylesheet" href="styles.css">  
   <H1> Harsha G</H1>
   </head>
-  
+  <h2> About me!</h2>
   <body>
-    <h2>school</h2><img src = images/canyon-crest-mission.webp>
+    <h3>school</h3><img src = images/canyon-crest-mission.webp>
     <p>As a <a href="https://sites.google.com/sduhsd.net/cca-counseling/home" target ="_blank"> 15-year-old sophmore</a>, school plays a big part in my daily routine. I'm committed to studying the things that most interest me while laying a solid academic foundation. I like to challenge myself and learn new things, especially in classes that require me to think critically and creatively. Although juggling projects, tests, and assignments can occasionally be stressful, I've improved my time management skills. I'm determined to take advantage of every chance I get because I see high school as a stepping stone toward my future objectives.
 </p>
-<h2>sports</h2><img src = "images/download (3).jpeg">
+<h3>sports</h3><img src = "images/download (3).jpeg">
 <p>Playing <a href="https://en.wikipedia.org/wiki/Sport/" target ="_blank"> sports,</a> is one of my greatest interests outside of school. I began playing a few years ago, and it soon evolved from a pastime to a means of personal development and challenge. I'm pushed by the sport to maintain my patience, discipline, and focus—especially when I'm trying to get faster and better at strategy. I learn something new about perseverance and maintaining composure under pressure from every game. I'm inspired to apply the same mentality to my academic work and personal objectives because table tennis has taught me that progress requires constant effort.
 </p>
 <h3> goals </h2><img src = "images/download (6).jpeg">
