--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">  
-  <H1> Harsha G</H1>
+  <h1> Harsha G</h1>
   </head>
   <h2> About me!</h2>
   <body>
