--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">  
-
+    <link rel="stylesheet" href="styles.css">    
   </head>
-  <h1> Harsha G</h1>
-  <h2> About me!</h2>
+  
+  <h1> Harsha Gurappadi</h1> <h2 > About me!</h2>
+  
   <body>
-    <h3>school</h3><img src = images/canyon-crest-mission.webp>
-    <p>As a <a href="https://sites.google.com/sduhsd.net/cca-counseling/home" target ="_blank"> 15-year-old sophmore</a>, school plays a big part in my daily routine. I'm committed to studying the things that most interest me while laying a solid academic foundation. I like to challenge myself and learn new things, especially in classes that require me to think critically and creatively. Although juggling projects, tests, and assignments can occasionally be stressful, I've improved my time management skills. I'm determined to take advantage of every chance I get because I see high school as a stepping stone toward my future objectives.
+    <div id="container">
+    <h3>school</h3><id=pic1><img src = images/canyon-crest-mission.webp>
+    <p>As a <a href="https://sites.google.com/sduhsd.net/cca-counseling/home" target ="_blank"></a></id> 15-year-old sophmore</a>, <span class = "highlight">school</span> plays a big part in my daily routine. I'm committed to studying the things that most interest me while laying a solid academic foundation. I like to challenge myself and learn new things, especially in classes that require me to think critically and creatively. Although juggling projects, tests, and assignments can occasionally be stressful, I've improved my time management skills. I'm determined to take advantage of every chance I get because I see high  <span class = "highlight">school</span> as a stepping stone toward my future objectives.
 </p>
+
 <h3>sports</h3><img src = "images/download (3).jpeg">
-<p>Playing <a href="https://en.wikipedia.org/wiki/Sport/" target ="_blank"> sports,</a> is one of my greatest interests outside of school. I began playing a few years ago, and it soon evolved from a pastime to a means of personal development and challenge. I'm pushed by the sport to maintain my patience, discipline, and focus—especially when I'm trying to get faster and better at strategy. I learn something new about perseverance and maintaining composure under pressure from every game. I'm inspired to apply the same mentality to my academic work and personal objectives because table tennis has taught me that progress requires constant effort.
+
+<p>Playing <a href="https://en.wikipedia.org/wiki/Sport/" target ="_blank"> sports,</a> is one of my greatest interests outside of  <span class = "highlight">school</span>. I began playing a few years ago, and it soon evolved from a pastime to a means of personal development and challenge. I'm pushed by the sport to maintain my patience, discipline, and focus—especially when I'm trying to get faster and better at strategy. I learn something new about perseverance and maintaining composure under pressure from every game. I'm inspired to apply the same mentality to my academic work and personal objectives because table tennis has taught me that progress requires constant effort.
 </p>
+
 <h3> goals </h3><img src = "images/download (6).jpeg">
+
 <p>I progress through<a href="https://cc.sduhsd.net/" target ="_blank"> high school,</a> I'm already considering my goals and future. Whether it's attending college or pursuing a career in technology, business, or another exciting field, I have big dreams for myself. I want to continue developing both personally and academically. I think that maintaining my curiosity, putting in a lot of effort, and growing from my mistakes will all help me achieve the objectives I set for myself.
+
 </p>
+    </div>
   </body>
 </html>
