--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   
   <body>
     <div id="container">
-    <h3>school</h3><id=pic1><img src = images/canyon-crest-mission.webp>
+      <div id = "sidebar">
+      <h3> info about me</h3>
+      <ul>
+        <li>3 facts about me:</li>
+        <li> I am 15 years old</li>
+        <li>I play table tennis</li>
+        <li> I go to CCA</li>
+      </ul>
+
+
+
+      </div>
+      <h3>school</h3>
+    <id=pic1><img src = images/canyon-crest-mission.webp>
     <p>As a <a href="https://sites.google.com/sduhsd.net/cca-counseling/home" target ="_blank"></a></id> 15-year-old sophmore</a>, <span class = "highlight">school</span> plays a big part in my daily routine. I'm committed to studying the things that most interest me while laying a solid academic foundation. I like to challenge myself and learn new things, especially in classes that require me to think critically and creatively. Although juggling projects, tests, and assignments can occasionally be stressful, I've improved my time management skills. I'm determined to take advantage of every chance I get because I see high  <span class = "highlight">school</span> as a stepping stone toward my future objectives.
 </p>
 
@@ -19,7 +32,7 @@
 
 <h3> goals </h3><img src = "images/download (6).jpeg">
 
-<p>I progress through<a href="https://cc.sduhsd.net/" target ="_blank"> high school,</a> I'm already considering my goals and future. Whether it's attending college or pursuing a career in technology, business, or another exciting field, I have big dreams for myself. I want to continue developing both personally and academically. I think that maintaining my curiosity, putting in a lot of effort, and growing from my mistakes will all help me achieve the objectives I set for myself.
+<p>I progress through<a href="https://cc.sduhsd.net/" target ="_blank"> high <span class = "highlight">school</span></a> I'm already considering my goals and future. Whether it's attending college or pursuing a career in technology, business, or another exciting field, I have big dreams for myself. I want to continue developing both personally and academically. I think that maintaining my curiosity, putting in a lot of effort, and growing from my mistakes will all help me achieve the objectives I set for myself.
 
 </p>
     </div>
